# fastapi-template

./: .dockerignore  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt  start_entrypoint.sh
api/: error_handlers.py  responses.py
conf/: logging.yaml  settings.toml  uvicorn.log.yaml
dockerfiles/: Dockerfile  Dockerfile.devel
dockerfiles/gpu/: Dockerfile  Dockerfile.devel
project_dummy/errors/: __init__.py  error_meta.py  error_types.py
scripts/: index.http
utilities/: safe_logging.py
