[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["franklucky001 <cppfrankgxy@163.com>"]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
dynaconf = "^3.1.9"
dataclasses-json = "^0.5.7"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
